--- a/css/exercises-select.css
+++ b/css/exercises-select.css
@@ -14,8 +14,8 @@ select {
     border-radius: 5px;
     border: none;
     outline: none;
-    background-color: #DB5940;
-    color: white;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
   }
   /* This is the exercise-display element, it adds all the commands below*/
   #exercise-display {
@@ -48,6 +48,7 @@ body {
     background-color: #e4f4fc;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
   
 /* This is the navigation bar, it adds all the commands below*/
@@ -262,4 +263,101 @@ img {vertical-align: middle;}
 .dark-mode {
   background-color: #333;
   color: #fff;
+}
+/* Footer Element*/
+.footer-dark {
+  padding:50px 0;
+  color:#f0f9ff;
+  background-color:#333;
+}
+
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
+}
+/* Media For Footer*/
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+.footer-dark .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
+}
+
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+}
+
+.footer-dark .item.social {
+  text-align:center;
+}
+
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align:center;
+    margin-top:20px;
+  }
+}
+
+.footer-dark .item.social > a {
+  font-size:20px;
+  width:36px;
+  height:36px;
+  line-height:36px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+  margin:0 8px;
+  color:#fff;
+  opacity:0.75;
+}
+
+.footer-dark .item.social > a:hover {
+  opacity:0.9;
+}
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+  opacity:0.3;
+  font-size:13px;
+  margin-bottom:0;
+}
+/* Col Element*/
+.col-md-6 {
+  margin-top:  600px; 
+  text-align: center;
+  color: white;
+  text-decoration: none;
 }
