--- a/css/kontakt-style.css
+++ b/css/kontakt-style.css
@@ -71,6 +71,7 @@ h1 {
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #e4f4fc;
+    overflow-x: hidden;
   }
   /* Navigation Bar*/
   .navbar {
