--- a/css/style.css
+++ b/css/style.css
@@ -339,5 +339,11 @@ img {vertical-align: middle;}
   margin-left: 200px;
 
 }
-
+.col-md-7 {
+  margin-top:  450px; 
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  margin-left: 50px;
+}
 
