--- a/css/style.css
+++ b/css/style.css
@@ -339,11 +339,60 @@ img {vertical-align: middle;}
   margin-left: 200px;
 
 }
+/*Footer Text*/
 .col-md-7 {
   margin-top:  450px; 
   text-align: center;
   color: white;
   text-decoration: none;
   margin-left: 50px;
+}
+/* Popup Message*/
+#popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+#popup {
+  background-color: rgb(152, 57, 57);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+  max-width: 600px;
+  width: 80%;
+  text-align: center;
+}
+
+#popup h1 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+#popup p {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
+
+#close-popup {
+  background-color: #5c5cff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+#close-popup:hover {
+  background-color: #2c2cff;
 }
 
