--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ img {vertical-align: middle;}
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: #DB5940;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -362,7 +362,7 @@ img {vertical-align: middle;}
 }
 
 #popup {
-  background-color: rgb(152, 57, 57);
+  background-color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
@@ -395,4 +395,5 @@ img {vertical-align: middle;}
 #close-popup:hover {
   background-color: #2c2cff;
 }
+
 
