--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ img {vertical-align: middle;}
 }
 
 #popup {
-  background-color: white;
+  background-color: #DB5940;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
