--- a/css/style.css
+++ b/css/style.css
@@ -354,12 +354,11 @@ img {vertical-align: middle;}
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #DB5940;
+  background-color: rgba(0,0,0,0.5);
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 9999;
-  color: #DB5940;
 }
 
 #popup {
